--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Stellar7/rgk",
+    "name": "Stranger7/rgk",
     "description": "Yii 2 RGK test tasks",
     "minimum-stability": "stable",
     "require": {
